--- a/index.html
+++ b/index.html
@@ -44,11 +44,11 @@
         <a href="www.linkedin.com/in/pierrot-rafanomezantsoa-229098184" target="_blank"><i class="bx bxl-linkedin" ></i></a> <br>
         
       </div>
-      <a href="cv.pdf" download="cv.pdf" class="btn">Download CV</a>
+      <a href="cv1.pdf" download="cv.pdf" class="btn">Download CV</a>
     </div>
 
     <div class="home-img">
-      <img src="images/about1.png" alt="">
+      <img src="images/about3.png" alt="">
     </div>
   </section>
 
