--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Responsive Personal Portfolio Website Design | Codehal</title>
+    <title>Pierrot RAFANOMEZANTSOA | Portfolio</title>
 
     <!-- box icons -->
     <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet" />
@@ -44,7 +44,7 @@
         <a href="www.linkedin.com/in/pierrot-rafanomezantsoa-229098184" target="_blank"><i class="bx bxl-linkedin" ></i></a> <br>
         
       </div>
-      <a href="cv1.pdf" download="cv.pdf" class="btn">Download CV</a>
+      <a href="cv1.pdf" download="cv1.pdf" class="btn">Download CV</a>
     </div>
 
     <div class="home-img">
