--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       <h1>Pierrot Rafanomezantsoa</h1>
       <h3>And I'm a <span class="multiple-text"></span> </h3>
       <p>Electronics Student at Polytechnic University of Antananarivo, recipient of
-         the prestigious SESAME program. Passionate about technology, computer science, artificial intelligence,
+         the prestigious SESAME program.<br>  Passionate about technology, computer science, artificial intelligence,
          automation learning, and electronics.  <br> 
         Contact me :</p><p style="color:#0ef;"> pierrotp19.aps1b@gmail.com</p>
 
